// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/comment return comment 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-r2yw6d-MuiAvatar-root"
        >
          T
        </div>
        <div
          class="comment-username"
        >
          Test user
        </div>
        <div
          aria-label="10/1/20, 12:00 AM"
          class="comment-date"
          data-mui-internal-clone-element="true"
        >
          3 years ago
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </button>
          <div
            class="css-1y66l7q-MuiPopper-root MuiPopperUnstyled-root"
            data-popper-escaped=""
            data-popper-placement="left"
            data-popper-reference-hidden=""
            role="tooltip"
            style="position: absolute; top: 0px; left: 0px; margin: 0px; right: 0px; transform: translate(0px, 0px);"
          >
            <div
              class="Menu noselect left"
            >
              <div
                class="menu-contents"
              >
                <div
                  class="menu-options"
                >
                  <div
                    aria-label="Delete"
                    class="MenuOption TextOption menu-option"
                    data-mui-internal-clone-element="true"
                    role="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                    <div
                      class="menu-name"
                    >
                      Delete
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div
                  class="menu-spacer hideOnWidescreen"
                />
                <div
                  class="menu-options hideOnWidescreen"
                >
                  <div
                    aria-label="Cancel"
                    class="MenuOption TextOption menu-option menu-cancel"
                    data-mui-internal-clone-element="true"
                    role="button"
                  >
                    <div
                      class="noicon"
                    />
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-ir5tdx"
      >
        <div
          class="bangle-editor-core"
          style="cursor: default;"
        >
          <span />
          <div
            class="css-1hl2trf"
            style="font-size: 14px; width: 100%; height: 100%;"
          >
            <div
              class="ProseMirror bangle-editor"
              contenteditable="false"
              translate="no"
            >
              <p>
                <br
                  class="ProseMirror-trailingBreak"
                />
              </p>
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`components/cardDetail/comment return comment and delete comment 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-r2yw6d-MuiAvatar-root"
        >
          T
        </div>
        <div
          class="comment-username"
        >
          Test user
        </div>
        <div
          aria-label="10/1/20, 12:00 AM"
          class="comment-date"
          data-mui-internal-clone-element="true"
        >
          3 years ago
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          data-testid="menu-wrapper"
          role="button"
        >
          <button
            class="Button IconButton css-w119tu"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </button>
          <div
            class="css-1y66l7q-MuiPopper-root MuiPopperUnstyled-root"
            data-popper-escaped=""
            data-popper-placement="left"
            data-popper-reference-hidden=""
            role="tooltip"
            style="position: absolute; top: 0px; left: 0px; margin: 0px; right: 0px; transform: translate(0px, 0px);"
          >
            <div
              class="Menu noselect left"
            >
              <div
                class="menu-contents"
              >
                <div
                  class="menu-options"
                >
                  <div
                    aria-label="Delete"
                    class="MenuOption TextOption menu-option"
                    data-mui-internal-clone-element="true"
                    role="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                    <div
                      class="menu-name"
                    >
                      Delete
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div
                  class="menu-spacer hideOnWidescreen"
                />
                <div
                  class="menu-options hideOnWidescreen"
                >
                  <div
                    aria-label="Cancel"
                    class="MenuOption TextOption menu-option menu-cancel"
                    data-mui-internal-clone-element="true"
                    role="button"
                  >
                    <div
                      class="noicon"
                    />
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-ir5tdx"
      >
        <div
          class="bangle-editor-core"
          style="cursor: default;"
        >
          <span />
          <div
            class="css-1hl2trf"
            style="font-size: 14px; width: 100%; height: 100%;"
          >
            <div
              class="ProseMirror bangle-editor"
              contenteditable="false"
              translate="no"
            >
              <p>
                <br
                  class="ProseMirror-trailingBreak"
                />
              </p>
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`components/cardDetail/comment return comment readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-r2yw6d-MuiAvatar-root"
        >
          T
        </div>
        <div
          class="comment-username"
        >
          Test user
        </div>
        <div
          aria-label="10/1/20, 12:00 AM"
          class="comment-date"
          data-mui-internal-clone-element="true"
        >
          3 years ago
        </div>
      </div>
      <div
        class="MuiBox-root css-ir5tdx"
      >
        <div
          class="bangle-editor-core"
          style="cursor: default;"
        >
          <span />
          <div
            class="css-1hl2trf"
            style="font-size: 14px; width: 100%; height: 100%;"
          >
            <div
              class="ProseMirror bangle-editor"
              contenteditable="false"
              translate="no"
            >
              <p>
                <br
                  class="ProseMirror-trailingBreak"
                />
              </p>
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
            <div
              class="bangle-tooltip"
              role="tooltip"
            >
              <div
                class="bangle-tooltip-content"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
